fixed formatting and spacing

--- a/index.css
+++ b/index.css
@@ -65,7 +65,7 @@ main {
 
 label {
   font-size: 1.3rem;
-  margin-bottom: 2px;
+  margin-bottom: 4px;
   width: 100%;
 }
 
@@ -80,7 +80,7 @@ legend {
   width: 100%;
   height: 2em;
   font-size: 1rem;
-  margin-bottom: 8px;
+  margin-bottom: 18px;
 }
 
 #number {
@@ -94,13 +94,22 @@ legend {
 
 #fields,
 #limits {
-  margin: 10px 0px;
+  margin: 18px 0px;
+}
+
+#fields legend {
+  margin-bottom: 4px;
+}
+
+#limits legend {
+  margin-bottom: 4px;
 }
 
 #text-area {
   width: 100%;
   height: 100px;
   font-size: 1.1rem;
+  margin-top: 15px;
 }
 
 button {
@@ -110,4 +119,8 @@ button {
 
 #limits input {
   margin-right: 4px;
+}
+
+#text-area-label {
+  margin-top: 18px;
 }
